# regmonkey_edapy

./: .gitignore  pyproject.toml
.github/workflows/: version-release-with-gittag.yml
docs/: branch_strategy.md  versioning_policy.md
src/regmonkey_edapy/: __init__.py
src/regmonkey_edapy/errors/: exceptions.py
src/regmonkey_edapy/pandas/: descriptive_statistics.py
tests/test_pandas/: test_descriptive_statistics.py
