[tool.poetry]
name = "regmonkey_edapy"
version = "0.1.0"
description = ""
authors = ["RyoNak <nakagamiryo0901@gmail.com>"]
license = "MIT"
readme = "README.md" 
packages = [{ include = "*", from = "src" }]
package-mode = true

[tool.poetry.dependencies]
python = "^3.11,<4.0"


[tool.poetry.group.dev-default.dependencies]
ipykernel = "^6.29.5"
jinja2 = "^3.1.4"
nbformat = "^5.10.4"
ruff = "^0.8.2"
regmonkey-style = "^1.6.1"
plotly = "^5.24.1"
matplotlib = "^3.9.3"


[tool.poetry.group.test_env.dependencies]
pytest = "^8.3.4"
pytest-ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
testpaths = ["tests"]


[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint]
ignore = ["E203", "E262", "E265", "W291", "W605"]
exclude = [".venv", "venv", "__pycache__", ".git"]
select = ["E", "F", "W", "I", "Q"]
